--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
     opacity: .75;
     width: 75vmin;
     height: 75vmin;
-    margin-top: 25px;
+    margin-bottom: 50px;
     grid-template-rows: repeat(16, 1fr);
     grid-template-columns: repeat(16, 1fr);
     border: 4vmin solid rgb(59, 41, 25);
